# CODE

./: .gitattributes  CONTRIBUTING.md  MANIFEST.in  README.md  _config.yml  agent.py  environment.py  mixin.py  model.py  pyproject.toml  requirements.txt  setup.py  utils.py
_includes/: head-custom.html
examples/: README.md  basic_usage.py  trajectory_inference.py
src/CODE/: __init__.py  agent.py  environment.py  mixin.py  model.py  module.py  utils.py
