[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scCODE"
version = "0.1.0"
description = "Correlated Latent Space Learning and Continuum Modeling of Single Cell Data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Zeyu Fu"},
    {name = "Chunlin Chen"}
]
keywords = [
    "single-cell",
    "RNA-seq",
    "VAE",
    "neural-ODE",
    "trajectory-inference",
    "deep-learning",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.23.0",
    "scanpy>=1.7.0",
    "anndata>=0.7.0",
    "torchdiffeq>=0.2.0",
    "tqdm>=4.50.0",
    "pandas>=1.1.0",
    "scib>=1.0.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=20.8b1",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/PeterPonyu/CODE"
"Bug Tracker" = "https://github.com/PeterPonyu/CODE/issues"
"Source Code" = "https://github.com/PeterPonyu/CODE"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
